--- a/myExtensionsList.json
+++ b/myExtensionsList.json
@@ -9,6 +9,7 @@
     "milosh86.extensions-bulk-installer": false,
     "go-ide": true,
     "le717.html-skeleton": true,
+    "brackets-html-wrapper": true,
     "quakerwinters.monokai-dark-storm": true,
     "newton-dark": true,
     "tomorrow-night": true,
