md preview & devdocs

--- a/myExtensionsList.json
+++ b/myExtensionsList.json
@@ -7,10 +7,12 @@
     "ivogabe.icons": true,
     "brackets-script-builder": true,
     "delkos": true,
+    "gruehle.dev-docs-viewer": true,
     "milosh86.extensions-bulk-installer": false,
     "go-ide": true,
     "le717.html-skeleton": true,
     "brackets-html-wrapper": true,
+    "gruehle.markdown-preview": true,
     "quakerwinters.monokai-dark-storm": true,
     "newton-dark": true,
     "grafluxe.pylinter": true,
